修改了多普勒bug

--- a/sensing_target.ipynb
+++ b/sensing_target.ipynb
@@ -4,7 +4,17 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "gpu_num = 0 # 使用 \"\" 来启用 CPU\n",
@@ -27,9 +37,11 @@
     "import pickle\n",
     "import time\n",
     "import mitsuba as mi\n",
+    "import open3d as o3d\n",
     "\n",
     "# Import Sionna RT components\n",
-    "from mysionna.rt import load_scene, Transmitter, Receiver, PlanarArray, Camera"
+    "from mysionna.rt import load_scene, Transmitter, Receiver, PlanarArray, Camera\n",
+    "from mysionna.rt.scattering_pattern import *"
    ]
   },
   {
@@ -52,8 +64,8 @@
     "                             num_cols=1,\n",
     "                             vertical_spacing=0.5,\n",
     "                             horizontal_spacing=0.5,\n",
-    "                             pattern=\"tr38901\",\n",
-    "                             polarization=\"V\")\n",
+    "                             pattern=\"dipole\",\n",
+    "                             polarization=\"H\")\n",
     "\n",
     "#################配置收端天线阵列#################\n",
     "scene.rx_array = PlanarArray(num_rows=1,\n",
@@ -61,7 +73,7 @@
     "                             vertical_spacing=0.5,\n",
     "                             horizontal_spacing=0.5,\n",
     "                             pattern=\"dipole\",\n",
-    "                             polarization=\"cross\")\n",
+    "                             polarization=\"H\")\n",
     "\n",
     "################创建发射机#########################\n",
     "tx = Transmitter(name=\"tx\",\n",
@@ -73,12 +85,8 @@
     "              position=[0,0,2.95])\n",
     "################ 将接收机加入到场景中##############\n",
     "scene.add(rx)\n",
-    "rx1 = Receiver(name=\"rx1\",\n",
-    "                position=[0,0,0])\n",
-    "scene.add(rx1)\n",
-    "tx.look_at(rx1)\n",
-    "rx.look_at(rx1)\n",
-    "scene.remove('rx1')"
+    "tx.look_at([0,0,0])\n",
+    "rx.look_at([0,0,0])"
    ]
   },
   {
@@ -107,7 +115,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "paths = scene.compute_paths(max_depth=4,diffraction=True,scattering=True,edge_diffraction=True)"
+    "p1 = LambertianPattern()\n",
+    "p2 = DirectivePattern(50)\n",
+    "scene.get(\"itu_plywood\").scattering_coefficient = 0.4\n",
+    "scene.get(\"itu_plywood\").scattering_pattern = p2\n",
+    "scene.get(\"itu_concrete\").scattering_coefficient = 0.7\n",
+    "scene.get(\"itu_concrete\").scattering_pattern = p1\n",
+    "scene.get(\"itu_floorboard\").scattering_coefficient = 0.3\n",
+    "scene.get(\"itu_floorboard\").scattering_pattern = p2\n",
+    "scene.get(\"itu_ceiling_board\").scattering_coefficient = 0.7\n",
+    "scene.get(\"itu_ceiling_board\").scattering_pattern = p1"
    ]
   },
   {
@@ -116,32 +133,130 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v,obj=scene.compute_target_velocities(paths, return_obj_names=True)"
+    "paths = scene.compute_paths(max_depth=3,diffraction=True,scattering=True,edge_diffraction=True,scat_keep_prob=0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'paths' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m scene\u001b[38;5;241m.\u001b[39mpreview(paths\u001b[38;5;241m=\u001b[39m\u001b[43mpaths\u001b[49m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'paths' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "scene.preview(paths=paths)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "tuple index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [8], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m subcarrier_spacing \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m15e3\u001b[39m\n\u001b[1;32m      2\u001b[0m num_time_steps \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m14\u001b[39m\n\u001b[0;32m----> 3\u001b[0m \u001b[43mpaths\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mapply_doppler\u001b[49m\u001b[43m(\u001b[49m\u001b[43msampling_frequency\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msubcarrier_spacing\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_time_steps\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnum_time_steps\u001b[49m\u001b[43m,\u001b[49m\u001b[43mtarget_velocities\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mv\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/sionna/sionna/mysionna/rt/paths.py:463\u001b[0m, in \u001b[0;36mPaths.apply_doppler\u001b[0;34m(self, sampling_frequency, num_time_steps, tx_velocities, rx_velocities, target_velocities)\u001b[0m\n\u001b[1;32m    461\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m tf\u001b[38;5;241m.\u001b[39mrank(target_velocities) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m6\u001b[39m:\n\u001b[1;32m    462\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe rank of `target_velocities` must be [1,1,1,1,1,max_num_paths]\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 463\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mtarget_velocities\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m3\u001b[39m:\n\u001b[1;32m    464\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe rank of `target_velocities` must be [1,1,1,1,1,max_num_paths,3]\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    465\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m target_velocities\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m5\u001b[39m] \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39ma\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m2\u001b[39m]:\n",
-      "File \u001b[0;32m~/miniconda3/lib/python3.8/site-packages/tensorflow/python/framework/tensor_shape.py:959\u001b[0m, in \u001b[0;36mTensorShape.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    957\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    958\u001b[0m   \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_v2_behavior:\n\u001b[0;32m--> 959\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_dims\u001b[49m\u001b[43m[\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m    960\u001b[0m   \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    961\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdims[key]\n",
-      "\u001b[0;31mIndexError\u001b[0m: tuple index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "v,obj=scene.compute_target_velocities(paths, return_obj_names=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "subcarrier_spacing = 15e3\n",
     "num_time_steps = 14\n",
     "paths.apply_doppler(sampling_frequency=subcarrier_spacing, num_time_steps=num_time_steps,target_velocities=v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a,tau = paths.cir()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vertices = paths.vertices\n",
+    "vertices = tf.reshape(vertices,[-1,3])\n",
+    "\n",
+    "# o3d.visualization.webrtc_server.enable_webrtc()\n",
+    "pcd = o3d.geometry.PointCloud()\n",
+    "pcd.points = o3d.utility.Vector3dVector(vertices)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# turn pcd in to open3d image\n",
+    "img = o3d.geometry.Image(np.array(pcd.points).astype(np.float32))\n",
+    "o3d.io.write_image(\"test.png\", img)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paths.normalize_delays = False\n",
+    "a,tau = paths.cir()\n",
+    "a=paths.a[0,0,0,0,0,:,0]\n",
+    "tau=paths.tau[0,0,0,:]\n",
+    "snr=10\n",
+    "frequency = scene.frequency\n",
+    "tau = tau[a!=0]\n",
+    "a = a[a!=0]\n",
+    "# a = a[tau>0]\n",
+    "# tau = tau[tau>0]\n",
+    "length = len(a)\n",
+    "phase = tf.complex(tf.zeros_like(tau),2*np.pi*frequency*tau)\n",
+    "e = tf.exp(phase)\n",
+    "a = a * e\n",
+    "tau_i = tf.repeat(tau,length)\n",
+    "tau_i = tf.reshape(tau_i, (length,length))\n",
+    "tau_j = tf.transpose(tau_i)\n",
+    "tau_i_mine_j = tau_i- tau_j\n",
+    "tau_i_mul_j = tau_i* tau_j\n",
+    "alpha_ij = tf.reshape(a, (length,1)) @ tf.reshape(a, (1,length))\n",
+    "one = tf.ones((length,length))\n",
+    "F_alpha= 2*snr*tf.math.abs(alpha_ij)/(tau_i_mul_j**2)\n",
+    "F_cos = (one+4*(np.pi**2)*(frequency) * tau_i_mul_j)*tf.math.cos(2*np.pi*frequency*tau_i_mine_j)\n",
+    "F_sin = 2*np.pi*frequency*tau_i_mine_j*tf.math.sin(2*np.pi*frequency*tau_i_mine_j)\n",
+    "F = F_alpha*(F_cos+F_sin)\n",
+    "F = F*10e-18\n",
+    "crb_F = tf.linalg.pinv(F)\n",
+    "crb = tf.linalg.diag_part(crb_F)\n",
+    "crb = tf.math.abs(crb)"
    ]
   }
  ],
