--- a/sensing_target.ipynb
+++ b/sensing_target.ipynb
@@ -11,7 +11,8 @@
      "text": [
       "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
       "[Open3D INFO] WebRTC GUI backend enabled.\n",
-      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n",
+      "[Open3D INFO] Resetting default logger to print to terminal.\n"
      ]
     }
    ],
@@ -38,10 +39,12 @@
     "import time\n",
     "import mitsuba as mi\n",
     "import open3d as o3d\n",
+    "from open3d.web_visualizer import draw\n",
     "\n",
     "# Import Sionna RT components\n",
     "from mysionna.rt import load_scene, Transmitter, Receiver, PlanarArray, Camera\n",
-    "from mysionna.rt.scattering_pattern import *"
+    "from mysionna.rt.scattering_pattern import *\n",
+    "from sionna.utils import insert_dims"
    ]
   },
   {
@@ -60,16 +63,16 @@
    "outputs": [],
    "source": [
     "#################配置发端天线阵列#################\n",
-    "scene.tx_array = PlanarArray(num_rows=1,\n",
-    "                             num_cols=1,\n",
+    "scene.tx_array = PlanarArray(num_rows=2,\n",
+    "                             num_cols=2,\n",
     "                             vertical_spacing=0.5,\n",
     "                             horizontal_spacing=0.5,\n",
     "                             pattern=\"dipole\",\n",
     "                             polarization=\"H\")\n",
     "\n",
     "#################配置收端天线阵列#################\n",
-    "scene.rx_array = PlanarArray(num_rows=1,\n",
-    "                             num_cols=1,\n",
+    "scene.rx_array = PlanarArray(num_rows=2,\n",
+    "                             num_cols=2,\n",
     "                             vertical_spacing=0.5,\n",
     "                             horizontal_spacing=0.5,\n",
     "                             pattern=\"dipole\",\n",
@@ -96,7 +99,7 @@
    "outputs": [],
    "source": [
     "scene.frequency = 2.14e9 # in Hz; implicitly updates RadioMaterials\n",
-    "scene.synthetic_array = True # If set to False, ray tracing will be done per antenna element (slower for large arrays)"
+    "scene.synthetic_array = False # If set to False, ray tracing will be done per antenna element (slower for large arrays)"
    ]
   },
   {
@@ -106,7 +109,7 @@
    "outputs": [],
    "source": [
     "scene.target_names = [\"door\"]\n",
-    "scene.target_velocities = [(1.,1.,0.)]"
+    "scene.target_velocities = [(5.,5.,0.)]"
    ]
   },
   {
@@ -133,28 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "paths = scene.compute_paths(max_depth=3,diffraction=True,scattering=True,edge_diffraction=True,scat_keep_prob=0.01)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'paths' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m scene\u001b[38;5;241m.\u001b[39mpreview(paths\u001b[38;5;241m=\u001b[39m\u001b[43mpaths\u001b[49m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'paths' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "scene.preview(paths=paths)"
+    "paths = scene.compute_paths(max_depth=4,diffraction=True,scattering=True,edge_diffraction=True,scat_keep_prob=0.001)"
    ]
   },
   {
@@ -163,12 +145,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v,obj=scene.compute_target_velocities(paths, return_obj_names=True)"
+    "# scene.preview(paths=paths)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v,obj=scene.compute_target_velocities(paths, return_obj_names=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,47 +170,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a,tau = paths.cir()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertices = paths.vertices\n",
-    "vertices = tf.reshape(vertices,[-1,3])\n",
-    "\n",
-    "# o3d.visualization.webrtc_server.enable_webrtc()\n",
-    "pcd = o3d.geometry.PointCloud()\n",
-    "pcd.points = o3d.utility.Vector3dVector(vertices)\n"
+    "a,tau = paths.cir()\n",
+    "mask = paths.mask\n",
+    "del paths"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ResourceExhaustedError",
+     "evalue": "{{function_node __wrapped__BatchMatMulV2_device_/job:localhost/replica:0/task:0/device:GPU:0}} OOM when allocating tensor with shape[1,1,4,1,4,14,1198,1198] and type complex64 on /job:localhost/replica:0/task:0/device:GPU:0 by allocator GPU_0_bfc [Op:BatchMatMulV2] name: ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mResourceExhaustedError\u001b[0m                    Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [13], line 18\u001b[0m\n\u001b[1;32m     16\u001b[0m alpha_1 \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mtranspose(alpha,perm\u001b[38;5;241m=\u001b[39m[\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m7\u001b[39m,\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m6\u001b[39m])\n\u001b[1;32m     17\u001b[0m alpha_2 \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mtranspose(alpha,perm\u001b[38;5;241m=\u001b[39m[\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m7\u001b[39m,\u001b[38;5;241m6\u001b[39m,\u001b[38;5;241m5\u001b[39m])\n\u001b[0;32m---> 18\u001b[0m alpha_ij \u001b[38;5;241m=\u001b[39m \u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmatmul\u001b[49m\u001b[43m(\u001b[49m\u001b[43malpha_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43malpha_2\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     19\u001b[0m alpha_ij \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mtranspose(alpha_ij,perm\u001b[38;5;241m=\u001b[39m[\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m6\u001b[39m,\u001b[38;5;241m7\u001b[39m,\u001b[38;5;241m5\u001b[39m])\n\u001b[1;32m     20\u001b[0m one \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mones((length,length))\n",
+      "File \u001b[0;32m~/miniconda3/lib/python3.8/site-packages/tensorflow/python/util/traceback_utils.py:153\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    151\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m    152\u001b[0m   filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[0;32m--> 153\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n\u001b[1;32m    154\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    155\u001b[0m   \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
+      "File \u001b[0;32m~/miniconda3/lib/python3.8/site-packages/tensorflow/python/framework/ops.py:6656\u001b[0m, in \u001b[0;36mraise_from_not_ok_status\u001b[0;34m(e, name)\u001b[0m\n\u001b[1;32m   6654\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mraise_from_not_ok_status\u001b[39m(e, name):\n\u001b[1;32m   6655\u001b[0m   e\u001b[38;5;241m.\u001b[39mmessage \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m name: \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(name \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m-> 6656\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m core\u001b[38;5;241m.\u001b[39m_status_to_exception(e) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n",
+      "\u001b[0;31mResourceExhaustedError\u001b[0m: {{function_node __wrapped__BatchMatMulV2_device_/job:localhost/replica:0/task:0/device:GPU:0}} OOM when allocating tensor with shape[1,1,4,1,4,14,1198,1198] and type complex64 on /job:localhost/replica:0/task:0/device:GPU:0 by allocator GPU_0_bfc [Op:BatchMatMulV2] name: "
+     ]
     }
    ],
    "source": [
-    "# turn pcd in to open3d image\n",
-    "img = o3d.geometry.Image(np.array(pcd.points).astype(np.float32))\n",
-    "o3d.io.write_image(\"test.png\", img)\n"
+    "frequency = scene.frequency\n",
+    "length = a.shape[5]\n",
+    "snr=10\n",
+    "phase = tf.complex(tf.zeros_like(tau),2*np.pi*frequency*tau)\n",
+    "e = tf.exp(phase)\n",
+    "e = tf.expand_dims(e, axis=-1)\n",
+    "a = a * e\n",
+    "tau_i = tf.repeat(tau,length,axis=-1)\n",
+    "tau_i = tf.reshape(tau_i, [tau.shape[0],tau.shape[1],tau.shape[2],tau.shape[3],tau.shape[4],length,length])\n",
+    "tau_j = tf.transpose(tau_i,perm=[0,1,2,3,4,6,5])\n",
+    "tau_i_mine_j = tau_i- tau_j\n",
+    "tau_i_mul_j = tau_i* tau_j\n",
+    "tau_i_mine_j = tf.expand_dims(tau_i_mine_j, axis=-1)\n",
+    "tau_i_mul_j = tf.expand_dims(tau_i_mul_j, axis=-1)\n",
+    "alpha = tf.expand_dims(a, axis=-2)\n",
+    "alpha_1 = tf.transpose(alpha,perm=[0,1,2,3,4,7,5,6])\n",
+    "alpha_2 = tf.transpose(alpha,perm=[0,1,2,3,4,7,6,5])\n",
+    "alpha_ij = tf.matmul(alpha_1,alpha_2)\n",
+    "alpha_ij = tf.transpose(alpha_ij,perm=[0,1,2,3,4,6,7,5])\n",
+    "one = tf.ones((length,length))\n",
+    "one = insert_dims(one, 5, 0)\n",
+    "one = insert_dims(one, 1, -1)\n",
+    "F_alpha= 2*snr*tf.math.abs(alpha_ij)/(tau_i_mul_j**2)\n",
+    "F_cos = (one+4*(np.pi**2)*(frequency) * tau_i_mul_j)*tf.math.cos(2*np.pi*frequency*tau_i_mine_j)\n",
+    "F_sin = 2*np.pi*frequency*tau_i_mine_j*tf.math.sin(2*np.pi*frequency*tau_i_mine_j)\n",
+    "F = F_alpha*(F_cos+F_sin)\n",
+    "del alpha_1,alpha_2,alpha_ij,tau_i_mine_j,tau_i_mul_j,tau_i,tau_j,F_alpha,F_cos,F_sin\n",
+    "F = F*10e-18"
    ]
   },
   {
@@ -228,41 +235,74 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "paths.normalize_delays = False\n",
-    "a,tau = paths.cir()\n",
-    "a=paths.a[0,0,0,0,0,:,0]\n",
-    "tau=paths.tau[0,0,0,:]\n",
-    "snr=10\n",
-    "frequency = scene.frequency\n",
-    "tau = tau[a!=0]\n",
-    "a = a[a!=0]\n",
-    "# a = a[tau>0]\n",
-    "# tau = tau[tau>0]\n",
-    "length = len(a)\n",
-    "phase = tf.complex(tf.zeros_like(tau),2*np.pi*frequency*tau)\n",
-    "e = tf.exp(phase)\n",
-    "a = a * e\n",
-    "tau_i = tf.repeat(tau,length)\n",
-    "tau_i = tf.reshape(tau_i, (length,length))\n",
-    "tau_j = tf.transpose(tau_i)\n",
-    "tau_i_mine_j = tau_i- tau_j\n",
-    "tau_i_mul_j = tau_i* tau_j\n",
-    "alpha_ij = tf.reshape(a, (length,1)) @ tf.reshape(a, (1,length))\n",
-    "one = tf.ones((length,length))\n",
-    "F_alpha= 2*snr*tf.math.abs(alpha_ij)/(tau_i_mul_j**2)\n",
-    "F_cos = (one+4*(np.pi**2)*(frequency) * tau_i_mul_j)*tf.math.cos(2*np.pi*frequency*tau_i_mine_j)\n",
-    "F_sin = 2*np.pi*frequency*tau_i_mine_j*tf.math.sin(2*np.pi*frequency*tau_i_mine_j)\n",
-    "F = F_alpha*(F_cos+F_sin)\n",
-    "F = F*10e-18\n",
     "crb_F = tf.linalg.pinv(F)\n",
     "crb = tf.linalg.diag_part(crb_F)\n",
-    "crb = tf.math.abs(crb)"
+    "crb = tf.math.abs(crb)*10e-18"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(1199,), dtype=float32, numpy=\n",
+       "array([0.0000000e+00, 0.0000000e+00, 3.6859726e-36, ..., 0.0000000e+00,\n",
+       "       0.0000000e+00, 0.0000000e+00], dtype=float32)>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.math.abs(tf.linalg.diag_part(tf.linalg.pinv(F[0,0,0,0,0,:,:,0])))*10e-18"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "objects = paths.objects\n",
+    "indices = tf.where(objects!=-1)\n",
+    "vertices = paths.vertices\n",
+    "v = tf.gather_nd(vertices, indices)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v = tf.reshape(v,[-1,3])\n",
+    "v = v.numpy()\n",
+    "pcd = o3d.geometry.PointCloud()\n",
+    "pcd.points = o3d.utility.Vector3dVector(v)\n",
+    "pcd.colors = o3d.utility.Vector3dVector(np.random.uniform(0,1,[v.shape[0],3]))\n",
+    "o3d.io.write_point_cloud(\"test.xyzrgb\", pcd)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -280,5 +320,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
