--- a/sensing_target.ipynb
+++ b/sensing_target.ipynb
@@ -64,19 +64,19 @@
    "source": [
     "#################配置发端天线阵列#################\n",
     "scene.tx_array = PlanarArray(num_rows=2,\n",
-    "                             num_cols=2,\n",
+    "                             num_cols=1,\n",
     "                             vertical_spacing=0.5,\n",
     "                             horizontal_spacing=0.5,\n",
     "                             pattern=\"dipole\",\n",
-    "                             polarization=\"H\")\n",
+    "                             polarization=\"V\")\n",
     "\n",
     "#################配置收端天线阵列#################\n",
     "scene.rx_array = PlanarArray(num_rows=2,\n",
-    "                             num_cols=2,\n",
+    "                             num_cols=1,\n",
     "                             vertical_spacing=0.5,\n",
     "                             horizontal_spacing=0.5,\n",
     "                             pattern=\"dipole\",\n",
-    "                             polarization=\"H\")\n",
+    "                             polarization=\"V\")\n",
     "\n",
     "################创建发射机#########################\n",
     "tx = Transmitter(name=\"tx\",\n",
@@ -99,7 +99,7 @@
    "outputs": [],
    "source": [
     "scene.frequency = 2.14e9 # in Hz; implicitly updates RadioMaterials\n",
-    "scene.synthetic_array = False # If set to False, ray tracing will be done per antenna element (slower for large arrays)"
+    "scene.synthetic_array = True # If set to False, ray tracing will be done per antenna element (slower for large arrays)"
    ]
   },
   {
@@ -164,7 +164,7 @@
    "outputs": [],
    "source": [
     "subcarrier_spacing = 15e3\n",
-    "num_time_steps = 14\n",
+    "num_time_steps = 1\n",
     "paths.apply_doppler(sampling_frequency=subcarrier_spacing, num_time_steps=num_time_steps,target_velocities=v)"
    ]
   },
@@ -175,30 +175,6 @@
    "outputs": [],
    "source": [
     "a,tau = paths.cir()\n",
-    "mask = paths.mask\n",
-    "del paths"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ResourceExhaustedError",
-     "evalue": "{{function_node __wrapped__BatchMatMulV2_device_/job:localhost/replica:0/task:0/device:GPU:0}} OOM when allocating tensor with shape[1,1,4,1,4,14,1198,1198] and type complex64 on /job:localhost/replica:0/task:0/device:GPU:0 by allocator GPU_0_bfc [Op:BatchMatMulV2] name: ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mResourceExhaustedError\u001b[0m                    Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [13], line 18\u001b[0m\n\u001b[1;32m     16\u001b[0m alpha_1 \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mtranspose(alpha,perm\u001b[38;5;241m=\u001b[39m[\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m7\u001b[39m,\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m6\u001b[39m])\n\u001b[1;32m     17\u001b[0m alpha_2 \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mtranspose(alpha,perm\u001b[38;5;241m=\u001b[39m[\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m7\u001b[39m,\u001b[38;5;241m6\u001b[39m,\u001b[38;5;241m5\u001b[39m])\n\u001b[0;32m---> 18\u001b[0m alpha_ij \u001b[38;5;241m=\u001b[39m \u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmatmul\u001b[49m\u001b[43m(\u001b[49m\u001b[43malpha_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43malpha_2\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     19\u001b[0m alpha_ij \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mtranspose(alpha_ij,perm\u001b[38;5;241m=\u001b[39m[\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m6\u001b[39m,\u001b[38;5;241m7\u001b[39m,\u001b[38;5;241m5\u001b[39m])\n\u001b[1;32m     20\u001b[0m one \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mones((length,length))\n",
-      "File \u001b[0;32m~/miniconda3/lib/python3.8/site-packages/tensorflow/python/util/traceback_utils.py:153\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    151\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m    152\u001b[0m   filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[0;32m--> 153\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n\u001b[1;32m    154\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    155\u001b[0m   \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
-      "File \u001b[0;32m~/miniconda3/lib/python3.8/site-packages/tensorflow/python/framework/ops.py:6656\u001b[0m, in \u001b[0;36mraise_from_not_ok_status\u001b[0;34m(e, name)\u001b[0m\n\u001b[1;32m   6654\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mraise_from_not_ok_status\u001b[39m(e, name):\n\u001b[1;32m   6655\u001b[0m   e\u001b[38;5;241m.\u001b[39mmessage \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m name: \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(name \u001b[38;5;28;01mif\u001b[39;00m name \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m-> 6656\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m core\u001b[38;5;241m.\u001b[39m_status_to_exception(e) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n",
-      "\u001b[0;31mResourceExhaustedError\u001b[0m: {{function_node __wrapped__BatchMatMulV2_device_/job:localhost/replica:0/task:0/device:GPU:0}} OOM when allocating tensor with shape[1,1,4,1,4,14,1198,1198] and type complex64 on /job:localhost/replica:0/task:0/device:GPU:0 by allocator GPU_0_bfc [Op:BatchMatMulV2] name: "
-     ]
-    }
-   ],
-   "source": [
     "frequency = scene.frequency\n",
     "length = a.shape[5]\n",
     "snr=10\n",
@@ -206,6 +182,9 @@
     "e = tf.exp(phase)\n",
     "e = tf.expand_dims(e, axis=-1)\n",
     "a = a * e\n",
+    "if scene.synthetic_array:\n",
+    "    tau = tf.expand_dims(tau, axis=3)\n",
+    "    tau = tf.expand_dims(tau, axis=2)\n",
     "tau_i = tf.repeat(tau,length,axis=-1)\n",
     "tau_i = tf.reshape(tau_i, [tau.shape[0],tau.shape[1],tau.shape[2],tau.shape[3],tau.shape[4],length,length])\n",
     "tau_j = tf.transpose(tau_i,perm=[0,1,2,3,4,6,5])\n",
@@ -221,45 +200,23 @@
     "one = tf.ones((length,length))\n",
     "one = insert_dims(one, 5, 0)\n",
     "one = insert_dims(one, 1, -1)\n",
-    "F_alpha= 2*snr*tf.math.abs(alpha_ij)/(tau_i_mul_j**2)\n",
+    "F_alpha= 2*snr*tf.math.divide_no_nan(tf.math.abs(alpha_ij),(tau_i_mul_j**2))\n",
     "F_cos = (one+4*(np.pi**2)*(frequency) * tau_i_mul_j)*tf.math.cos(2*np.pi*frequency*tau_i_mine_j)\n",
     "F_sin = 2*np.pi*frequency*tau_i_mine_j*tf.math.sin(2*np.pi*frequency*tau_i_mine_j)\n",
     "F = F_alpha*(F_cos+F_sin)\n",
-    "del alpha_1,alpha_2,alpha_ij,tau_i_mine_j,tau_i_mul_j,tau_i,tau_j,F_alpha,F_cos,F_sin\n",
-    "F = F*10e-18"
+    "del alpha,alpha_1,alpha_2,alpha_ij,tau_i_mine_j,tau_i_mul_j,tau_i,tau_j,F_alpha,F_cos,F_sin,one,phase,e\n",
+    "F = tf.transpose(F,perm=[0,1,2,3,4,7,5,6])\n",
+    "F = tf.reshape(F, [-1,length,length]) * 1e-18"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "crb_F = tf.linalg.pinv(F)\n",
-    "crb = tf.linalg.diag_part(crb_F)\n",
-    "crb = tf.math.abs(crb)*10e-18"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: shape=(1199,), dtype=float32, numpy=\n",
-       "array([0.0000000e+00, 0.0000000e+00, 3.6859726e-36, ..., 0.0000000e+00,\n",
-       "       0.0000000e+00, 0.0000000e+00], dtype=float32)>"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tf.math.abs(tf.linalg.diag_part(tf.linalg.pinv(F[0,0,0,0,0,:,:,0])))*10e-18"
+    "crb = tf.linalg.diag_part(tf.linalg.pinv(F))\n",
+    "crb = tf.abs(crb)"
    ]
   },
   {
@@ -269,14 +226,114 @@
    "outputs": [],
    "source": [
     "objects = paths.objects\n",
-    "indices = tf.where(objects!=-1)\n",
     "vertices = paths.vertices\n",
-    "v = tf.gather_nd(vertices, indices)\n"
+    "\n",
+    "num_targets = objects.shape[1]\n",
+    "num_sources = objects.shape[2]\n",
+    "num_rx = paths.a.shape[1]\n",
+    "num_rx_ant = paths.a.shape[2]\n",
+    "num_tx = paths.a.shape[3]\n",
+    "num_tx_ant = paths.a.shape[4]\n",
+    "max_num_paths = paths.a.shape[5]\n",
+    "max_depth = objects.shape[0]\n",
+    "\n",
+    "if objects.shape[1] != num_rx*num_rx_ant:\n",
+    "    objects = tf.repeat(objects,int(num_rx*num_rx_ant/objects.shape[1]),axis=1)\n",
+    "if objects.shape[2] != num_tx*num_tx_ant:\n",
+    "    objects = tf.repeat(objects,int(num_tx*num_tx_ant/objects.shape[2]),axis=2)\n",
+    "objects = tf.reshape(objects, [max_depth,num_rx,num_rx_ant,num_tx,num_tx_ant,max_num_paths])\n",
+    "if vertices.shape[1] != num_rx*num_rx_ant:\n",
+    "    vertices = tf.repeat(vertices,int(num_rx*num_rx_ant/vertices.shape[1]),axis=1)\n",
+    "if vertices.shape[2] != num_tx*num_tx_ant:\n",
+    "    vertices = tf.repeat(vertices,int(num_tx*num_tx_ant/vertices.shape[2]),axis=2)\n",
+    "vertices = tf.reshape(vertices, [max_depth,num_rx,num_rx_ant,num_tx,num_tx_ant,max_num_paths,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crb = tf.where(crb==0,1,crb)\n",
+    "crb = tf.reshape(crb, [-1,num_rx,num_rx_ant,num_tx,num_tx_ant,num_time_steps,max_num_paths])\n",
+    "crb = tf.transpose(crb,perm=[0,1,2,3,4,6,5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crb_b1 = tf.reduce_min(crb,axis=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = paths.mask\n",
+    "if mask.shape[1] != num_rx*num_rx_ant:\n",
+    "    mask = tf.repeat(mask,int(num_rx*num_rx_ant/mask.shape[1]),axis=1)\n",
+    "if mask.shape[2] != num_tx*num_tx_ant:\n",
+    "    mask = tf.repeat(mask,int(num_tx*num_tx_ant/mask.shape[2]),axis=2)\n",
+    "mask = tf.reshape(mask, [-1,num_rx,num_rx_ant,num_tx,num_tx_ant,max_num_paths])\n",
+    "crb_b1 = tf.where(mask,crb_b1,1)\n",
+    "crb_b1 = tf.repeat(crb_b1,max_depth,axis=0)\n",
+    "\n",
+    "indices = tf.where(objects != -1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v = tf.gather_nd(vertices, indices)\n",
+    "c = tf.gather_nd(crb_b1, indices)\n",
+    "c = tf.where(c==0,1,c)\n",
+    "c = tf.where(c==1,0,c)\n",
+    "indices = tf.where(c != 0)\n",
+    "c = tf.gather_nd(c, indices)\n",
+    "v = tf.gather_nd(v, indices)\n",
+    "c = np.log10(c)\n",
+    "# normalize c\n",
+    "c = (c - np.min(c)) / (np.max(c) - np.min(c))\n",
+    "v = v.numpy()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# v1,idx = np.unique(v, return_index = True,axis=0)\n",
+    "# c1 = c[idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c_color = np.expand_dims(c, axis=-1)\n",
+    "c_color = np.repeat(c_color,3,axis=-1)\n",
+    "color_start = np.array([[75./255, 0, 130./255]])\n",
+    "color_start = np.repeat(color_start,c.shape[0],axis=0)\n",
+    "color_end = np.array([[1, 1, 0]])\n",
+    "color_end = np.repeat(color_end,c.shape[0],axis=0)\n",
+    "c_color = color_start + c_color * (color_end - color_start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -285,17 +342,16 @@
        "True"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "v = tf.reshape(v,[-1,3])\n",
-    "v = v.numpy()\n",
     "pcd = o3d.geometry.PointCloud()\n",
     "pcd.points = o3d.utility.Vector3dVector(v)\n",
-    "pcd.colors = o3d.utility.Vector3dVector(np.random.uniform(0,1,[v.shape[0],3]))\n",
+    "pcd.colors = o3d.utility.Vector3dVector(c_color)\n",
+    "# pcd.colors = o3d.utility.Vector3dVector(np.random.rand(v.shape[0],3))\n",
     "o3d.io.write_point_cloud(\"test.xyzrgb\", pcd)"
    ]
   }
