正在实现基站覆盖图

--- a/sensing_target.ipynb
+++ b/sensing_target.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "gpu_num = 0 # 使用 \"\" 来启用 CPU\n",
@@ -27,18 +37,18 @@
     "import sionna\n",
     "\n",
     "# Import Sionna RT components\n",
-    "from mysionna.rt import load_scene, Transmitter, Receiver, PlanarArray, Camera\n",
-    "from mysionna.rt.scattering_pattern import *\n",
-    "from sionna.utils import insert_dims"
+    "from mysionna.rt import load_scene, Transmitter, Receiver, PlanarArray\n",
+    "from mysionna.rt.scattering_pattern import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scene = load_scene(\"Indoor/indoor.xml\")"
+    "scene = load_scene(\"Indoor/indoor.xml\")\n",
+    "# scene = load_scene(sionna.rt.scene.etoile)"
    ]
   },
   {
@@ -48,29 +58,29 @@
    "outputs": [],
    "source": [
     "#################配置发端天线阵列#################\n",
-    "scene.tx_array = PlanarArray(num_rows=2,\n",
+    "scene.tx_array = PlanarArray(num_rows=1,\n",
     "                             num_cols=1,\n",
     "                             vertical_spacing=0.5,\n",
     "                             horizontal_spacing=0.5,\n",
     "                             pattern=\"dipole\",\n",
-    "                             polarization=\"V\")\n",
+    "                             polarization=\"cross\")\n",
     "\n",
     "#################配置收端天线阵列#################\n",
-    "scene.rx_array = PlanarArray(num_rows=2,\n",
+    "scene.rx_array = PlanarArray(num_rows=1,\n",
     "                             num_cols=1,\n",
     "                             vertical_spacing=0.5,\n",
     "                             horizontal_spacing=0.5,\n",
     "                             pattern=\"dipole\",\n",
-    "                             polarization=\"V\")\n",
+    "                             polarization=\"cross\")\n",
     "\n",
     "################创建发射机#########################\n",
     "tx = Transmitter(name=\"tx\",\n",
-    "                 position=[0,0,2.95])\n",
+    "                 position=[8.5,10,10])\n",
     "################ 将发射机加入到场景中##############\n",
     "scene.add(tx)\n",
     "#################创建接收机########################\n",
     "rx = Receiver(name=\"rx\",\n",
-    "              position=[0,0,2.95])\n",
+    "              position=[8.5,10,10])\n",
     "################ 将接收机加入到场景中##############\n",
     "scene.add(rx)\n",
     "tx.look_at([0,0,0])\n",
@@ -119,6 +129,28 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m crbs \u001b[38;5;241m=\u001b[39m \u001b[43mscene\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcoverage_map_sensing\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2.95\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/sionna/mysionna/rt/scene.py:1887\u001b[0m, in \u001b[0;36mScene.coverage_map_sensing\u001b[0;34m(self, map_center, map_size_x, map_size_y, cell_size, look_at, max_sample_each_turn, max_depth, num_samples, los, reflection, diffraction, scattering, edge_diffraction, scatter_keep_prob, subcarrier_spacing, num_time_steps)\u001b[0m\n\u001b[1;32m   1885\u001b[0m \u001b[38;5;66;03m# update positions\u001b[39;00m\n\u001b[1;32m   1886\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;28mmin\u001b[39m(max_sample_each_turn,end\u001b[38;5;241m-\u001b[39mstart)):\n\u001b[0;32m-> 1887\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtransmitters\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mvalues()\u001b[38;5;241m.\u001b[39mposition \u001b[38;5;241m=\u001b[39m cell_pos[start\u001b[38;5;241m+\u001b[39mi]\n\u001b[1;32m   1888\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreceivers[i]\u001b[38;5;241m.\u001b[39mvalues()\u001b[38;5;241m.\u001b[39mposition \u001b[38;5;241m=\u001b[39m cell_pos[start\u001b[38;5;241m+\u001b[39mi]\n\u001b[1;32m   1889\u001b[0m crbs\u001b[38;5;241m.\u001b[39mappend([])\n",
+      "\u001b[0;31mKeyError\u001b[0m: 0"
+     ]
+    }
+   ],
+   "source": [
+    "crbs = scene.coverage_map_sensing([0,0,2.95],6,10,0.5,[0,0,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "paths = scene.compute_paths(max_depth=4,diffraction=True,scattering=True,edge_diffraction=True)"
@@ -135,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,9 +196,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "paths.export_crb(crb,\"test.xyzrgb\")"
    ]
